--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 typer = {extras = ["all"], version = "*"}
 mutagen = "*"
-tqdm = "*"
+PyMusicOrganizer = {editable = true, path = "."}
 
 [dev-packages]
 black = "*"
